--- a/tig_client/src/index.html
+++ b/tig_client/src/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <base href="/" />
     <title>The Islander's Guide</title>
-
+    <link rel="icon" type="image/png" href="https://i7.pngflow.com/pngimage/573/947/png-animal-crossing-new-leaf-animal-crossing-happy-home-designer-video-game-nintendo-3ds-animal-crossing-game-leaf-nintendo-grass-clipart.png" />
     <!-- bootstrap css -->
     <!-- Latest compiled and minified CSS -->
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css">
